--- a/movies-and-shows/src/pages/homepage/homepage.styles.css
+++ b/movies-and-shows/src/pages/homepage/homepage.styles.css
@@ -1,3 +1,4 @@
 .cards {
-  width: 100vw;
+  width: 90vw;
+  margin: auto;
 }
